[tool.poetry]
name = "nite_howl"
version = "0.1.15"
description = ""
authors = ["Dante Devenir <dantedevenir@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "3.5.2"
pyarrow = "17.0.0"
confluent-kafka = "2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
ipykernel = "^6.29.5"
mypy = "^1.11.1"
types-toml = "^0.10.8"
pandas_stubs = "^2.2.2"
types_requests = "^2.32.0"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"